@startuml
package "Modelo" {
  package "Parcelas"{

}

package "Mapa"{


}
package "Defensas"{


}
package "Jugador"{

}

}

package "Vista" {
  class AlertBox
  class AlgoDefenseVista
  class BienvenidoVista
  class FinJuegoVista
  class ColocarDefensaVista
  class ComoColocarDefensaVista
  class ComoJugarEnemigosVista
  class ComoJugarParcelaVista
  class CreditosVista
  class EjecutarTurnoVista

}

package "Controlador" {
  class SiguienteTurnoHandler
  class UbicarTorreHandler
  class UbicarTrampaHandler
  class InformacionTorreBlancaHandler
  class InformacionTorrePlateadaHandler
  class InformacionTrampaArenosaHandler
  class LoginBotonControlador
  class PlayAgainControlador

}

Controlador --> Modelo

Vista --> Controlador

Modelo -> Vista

Controlador --> Vista
@enduml